[package]
name = "backup"
version = "0.1.0"
authors = ["Will Boyd <will@whbboyd.com>"]
license = "GPL-3.0"

[dependencies]
docopt = "*"
env_logger = "*"
flate2 = { version = "*", features = ["zlib"], default-features = false }
log = "*"
rust-crypto = "*"
rustc-serialize = "*"
tar = "*"
walkdir = "*"
